@@ -1,0 +1,10 @@
+## <summary>Interfaces to test the --context selint flag</summary
+
+# Here is a comment to avoid selint complaining about C-004
+interface(`context_signal',`
+	gen_require(`
+		type context_t;
+	')
+
+	allow $1 context_t:process signal;
+')
